--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//testBootstrap/vues/accueil.php=UTF-8
+encoding/<project>=UTF-8
 encoding/fonctions.php=UTF-8
